Fixed all issues. Just don't hit new game button.

--- a/HeartsSystem/src/heartssystem/HeartsGUI.form
+++ b/HeartsSystem/src/heartssystem/HeartsGUI.form
@@ -10,6 +10,7 @@
           </Properties>
           <Events>
             <EventHandler event="menuKeyPressed" listener="javax.swing.event.MenuKeyListener" parameters="javax.swing.event.MenuKeyEvent" handler="jMenu1MenuKeyPressed"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jMenu1MouseClicked"/>
           </Events>
         </Menu>
         <Menu class="javax.swing.JMenu" name="statsMenuButton">
