--- a/HeartsSystem/src/heartssystem/StatsGUI.form
+++ b/HeartsSystem/src/heartssystem/StatsGUI.form
@@ -41,15 +41,23 @@
                   </Group>
                   <Component id="gamesWonLabel" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="moonsShotLabel" max="32767" attributes="0"/>
-                  <Component id="player1MoonsShot" max="32767" attributes="0"/>
-                  <Component id="player2MoonsShot" alignment="1" max="32767" attributes="0"/>
-                  <Component id="player3MoonsShot" alignment="1" max="32767" attributes="0"/>
-                  <Component id="player4MoonsShot" alignment="1" min="-2" pref="56" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="moonsShotLabel" max="32767" attributes="0"/>
+                          <Component id="player1MoonsShot" max="32767" attributes="0"/>
+                          <Component id="player2MoonsShot" alignment="1" max="32767" attributes="0"/>
+                          <Component id="player3MoonsShot" alignment="1" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="50" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="player4MoonsShot" min="-2" pref="56" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace pref="50" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
